# SpeedometerPlugin

./: .gitignore  Cargo.toml  README.md
Speedometer/: Speedometer.cpp  Speedometer.h  speedometer.set
src/: lib.rs  main.rs
