[package]
name = "speedometer"
version = "0.1.0"
authors = ["Max Timkovich <mtimkovich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# bakkesmod = "0.2"
#
# [lib]
# name = "speedometer"
# crate_type = ["cdylib"]
